tests/compile_fail/state/no_superstate_arg.stderr
error: the `moku::superstate` attribute requires a single State name as an argument, e.g. `#[superstate(Top)]`
  --> tests/compile_fail/state/no_superstate_arg.rs:13:5
   |
13 |     #[superstate()]
   |     ^
